@@ -41,6 +41,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>-Xlint:all</arg>
                     </compilerArgs>
                 </configuration>
